--- a/theme/marketshop1/dept.phtml
+++ b/theme/marketshop1/dept.phtml
@@ -2,7 +2,7 @@
 	Response.CodePage = 1252 
 	Response.CharSet = "windows-1252" 
 %>
-<!--#INCLUDE FILE="../../core/include_index_start.phtml"-->
+<!--#INCLUDE FILE="../../core/catalog/include_dept_start.phtml"-->
 <!--#INCLUDE FILE="template_setting.phtml"-->
 <!DOCTYPE html>
 <html>
@@ -14,13 +14,14 @@
 <div class="wrapper-wide">
 	<!--#INCLUDE FILE="include/header.phtml"-->
 	<div id="container">
-		<!--#INCLUDE FILE="include/index.phtml"-->
+		<!--#INCLUDE FILE="include/dept.phtml"-->
 	</div>
 	<!--#INCLUDE FILE="include/footer.phtml"-->
+	
 </div>
 <!--#INCLUDE FILE="include/js.phtml"-->
 <!--#INCLUDE FILE="include/before_body_end.phtml"-->
 <!--#INCLUDE FILE="include/AbsoluteFooter.phtml"-->
 </body>
 </html>
-<!--#INCLUDE FILE="../../core/include_index_end.phtml"-->
+<!--#INCLUDE FILE="../../core/catalog/include_dept_end.phtml"-->
