--- a/theme/marketshop1/basket.phtml
+++ b/theme/marketshop1/basket.phtml
@@ -2,7 +2,7 @@
 	Response.CodePage = 1252 
 	Response.CharSet = "windows-1252" 
 %>
-<!--#INCLUDE FILE="../../core/catalog/include_dept_start.phtml"-->
+<!--#INCLUDE FILE="../../core/checkout/include_basket_start.phtml"-->
 <!--#INCLUDE FILE="template_setting.phtml"-->
 <!DOCTYPE html>
 <html>
@@ -14,7 +14,7 @@
 <div class="wrapper-wide">
 	<!--#INCLUDE FILE="include/header.phtml"-->
 	<div id="container">
-		<!--#INCLUDE FILE="include/dept.phtml"-->
+		<!--#INCLUDE FILE="include/basket.phtml"-->
 	</div>
 	<!--#INCLUDE FILE="include/footer.phtml"-->
 </div>
@@ -23,4 +23,4 @@
 <!--#INCLUDE FILE="include/AbsoluteFooter.phtml"-->
 </body>
 </html>
-<!--#INCLUDE FILE="../../core/catalog/include_dept_end.phtml"-->
+<!--#INCLUDE FILE="../../core/checkout/include_basket_end.phtml"-->
